--- a/style.css
+++ b/style.css
@@ -2,21 +2,7 @@
     margin: 0px;
     padding: 0px;
     background-color: #efefef;
-}
-
-.numberCircle {
-    border-radius: 50%;
-    width: 36px;
-    height: 36px;
-    padding: 8px;
-
-    background: #efefef;
-    border: 3px solid #670000;
-    color: #670000;
-    text-align: center;
-    vertical-align: middle;
-
-    font: 35px Raleway, sans-serif;
+    /* background-color: blue; */
 }
 
 main {
